--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="https://geek-007.github.io/">Geek's Homepage</a></h1>
+        <h1><a href="https://geek-007.github.io/">Geek's Resume</a></h1>
 		<img width="300" height="300" src="https://s1.ax1x.com/2018/12/03/FMALs1.jpg" alt="Logo" />
-        <ul>
+       <center><ul>
         <li><a href="https://geek-007.github.io/resume/resume.pdf" target="_blank">Download <strong>PDF File</strong></a></li>
-		</ul>
+		</ul><center/>
         <p>Blog: <a href="#" target="_blank">icyfish</a></p>       
 		<hr>
       </header>
       <section>
-	  <body marginheight="0"><h1>Resume</h1>
+	  <body marginheight="0"><h1>Homepage</h1>
       <blockquote>
       <p>You can find all the information <a href="https://github.com/geek-007">on GitHub</a>
       </p>
