--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<hr>
       </header>
       <section>
-	  <body marginheight="0"><h1>Homepage</h1>
+	  <body marginheight="0"><h1>Welcome to My Homepage</h1>
       <blockquote>
       <p>You can find all the information <a href="https://github.com/geek-007">on GitHub</a>
       </p>
