--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <h1><a href="https://geek-007.github.io/">Geek's Resume</a></h1>
 		<img width="300" height="300" src="https://s1.ax1x.com/2018/12/03/FMALs1.jpg" alt="Logo" />
        <center><ul>
-        <li><a href="https://geek-007.github.io/resume/resume.pdf" target="_blank">Download <strong>PDF File</strong></a></li>
+        <li><a href="/resume.pdf" target="_blank">Download <strong>PDF File</strong></a></li>
 		</ul><center/>
-        <p>Blog: <a href="#" target="_blank">icyfish</a></p>       
+        <p>Blog: <a href="#" target="_blank">more</a></p>       
 		<hr>
       </header>
       <section>
@@ -32,7 +32,7 @@
        <hr>
         <h2>Personal Information</h2>
         <ul>
-		  <li>Name:<a href="https://www.baidu.com">Geek</a>
+          <li>Name:<a href="https://www.baidu.com">Geek</a>
           <li>Github: <a href="https://github.com/Geek-007">Geek</a>
           <li>Weibo: <a href="https://weibo.com/">@Gaoj</a>
           <li>Email: <a href="mailto:tongqingqing@iga.ac.cn">tongqingqing@iga.ac.cn</a>     
