--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Geek's Resume</title>
+    <center><title>Geek's Resume</title></center>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1><a href="https://geek-007.github.io/">Geek's Resume</a></h1>
-		<img width="300" height="300" src="https://s1.ax1x.com/2018/12/03/FMALs1.jpg" alt="Logo" />
+		<img width="280" height="280" src="https://s1.ax1x.com/2018/12/03/FMALs1.jpg" alt="Logo" />
        <center><ul>
         <li><a href="/resume.pdf" target="_blank">Download <strong>PDF File</strong></a></li>
 		</ul><center/>
