--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        <center><ul>
         <li><a href="/resume.pdf" target="_blank">Download <strong>PDF File</strong></a></li>
 		</ul><center/>
-        <p>Blog: <a href="#" target="_blank">more</a></p>       
+        <p>Blog: <a href="#" target="_blank">more</a></p>|<p>Blog: <a href="#" target="_blank">more</a></p>|<p>Blog: <a href="#" target="_blank">more</a></p>      
 		<hr>
       </header>
       <section>
