--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
        <center><ul>
         <li><a href="/resume.pdf" target="_blank">Download <strong>PDF File</strong></a></li>
 		</ul><center/>
-        <p>Blog: <a href="#" target="_blank">more</a></p>|<p>Blog: <a href="#" target="_blank">more</a></p>|<p>Blog: <a href="#" target="_blank">more</a></p>      
-		<hr>
+        <p>Blog: <a href="#" target="_blank">more</a></p>
+	<hr>
       </header>
       <section>
 	  <body marginheight="0"><h1>Welcome to My Homepage</h1>
