--- a/index.html
+++ b/index.html
@@ -32,13 +32,11 @@
        <hr>
         <h2>Personal Information</h2>
         <ul>
-          <li>Name:<a href="https://www.baidu.com">QingQing Tong</a>
-	  <li>Native Place: <a href="https://weibo.com/">HuBei·ZhiJiang</a>
-	  <li>Email: <a href="mailto:tongqingqing@iga.ac.cn">tongqingqing@iga.ac.cn</a> 
-          <li>Major:<a href="https://www.baidu.com">Environmental Science</a>
-	  <li>Education:<a href="https://www.baidu.com">Junior College</a>		  
-          <li>AliCode: <a href="https://code.aliyun.com/geek-007/">Geek-007</a>
-	  <li>Address: <a href="https://www.amap.com/place/B01AF0ZZ9M">4888 Shengbei Street, Changchun 130102, P. R. China</a>  
+          <li>Name：<a href="https://www.baidu.com">QingQing Tong</a>
+	  <li>Native Place：<a href="https://weibo.com/">HuBei·ZhiJiang</a>
+	  <li>Major：<a href="https://www.baidu.com">Environmental Science</a>
+	  <li>Email：<a href="mailto:tongqingqing@iga.ac.cn">tongqingqing@iga.ac.cn</a> 
+	  <li>Address：<a href="https://www.amap.com/place/B01AF0ZZ9M">4888 Shengbei Street, Changchun 130102, P. R. China</a>  
         </ul>
 <hr>
         <h2>Research Interests</h2>
