--- a/index.html
+++ b/index.html
@@ -32,19 +32,18 @@
         <h2>Personal Information</h2>
         <ul>
           <li>Name：<a href="https://www.baidu.com">QingQing Tong</a>
-	  <li>Native Place：<a href="https://weibo.com/">HuBei·ZhiJiang</a>
-	  <li>Major：<a href="https://www.baidu.com">Environmental Science</a>
 	  <li>Email：<a href="mailto:tongqingqing@iga.ac.cn">tongqingqing@iga.ac.cn</a> 
+          <li>Native Place：<a href="http://www.zgzhijiang.gov.cn/">HuBei·ZhiJiang</a>
 	  <li>Address：<a href="https://www.amap.com/place/B01AF0ZZ9M">4888 Shengbei Street, Changchun 130102, P. R. China</a>  
         </ul>
 <hr>
         <h2>Research Interests</h2>
         <ul>
-          <li>Personality independence</li>
-          <li>Keen to learn without interruption</li>
-          <li>Worked on projects with others, and also independently assumed some - small projects</li>
-          <li>Received some minor competition awards</li>
-          <li>Hope for greater progress</li>
+          <li>Meteorological Model</li>
+          <li>Air Pollution Model</li>
+          <li>Impact of snowfall on air quality</li>
+          <li>Research and development of micro low-cost sensors for atmospheric environment</li>
+          <li>Satellite numerical assimilation（To add）<li>
         </ul>
 <hr>
 		<h2>Professional Experience</h2>
