--- a/index.html
+++ b/index.html
@@ -43,22 +43,26 @@
           <li>Air Pollution Model</li>
           <li>Impact of snowfall on air quality</li>
           <li>Research and development of micro low-cost sensors for atmospheric environment</li>
-          <li>Satellite numerical assimilation（To add）<li>
+          <li>Satellite numerical assimilation（To add）</li>
         </ul>
 <hr>
-		<h2>Professional Experience</h2>
+	<h2>Professional Experience</h2>
         <ul>
-          <li>2016-2019　　Research Assistant　-　Northeast Institute of Geography and Agroecology, CAS</li>
+          <li>2016.07-Now　　Research Assistant　-　Northeast Institute of Geography and Agroecology, CAS</li>
+	  <li>2015.06-2016.06　　Information Officer　-　Hubei Dayu water Resources and Hydropower Construction co.ltd</li>
         </ul>
 <hr>
         <h2>Education</h2>
         <ul>
-          <li>2007-2008　　Ph.D.　-　Civil and Environmental Engineering </li>
+          <li>2019-2021　　Bachelor's　-　Civil and Environmental Engineering </li>
+          <li>2016-2019　　Bachelor's　-　Civil and Environmental Engineering </li>
+          <li>2013-2016　　Bachelor's　-　Civil and Environmental Engineering </li>
         </ul>
 <hr>
         <h2>Honors and Awards</h2>
-        <ul>
-          <li>2019　　Editor’s Award　-　Advances in Atmospheric Sciences </li>
+	<ul>
+	  <li>2016　　Excellent Graduates</li>
+          <li>2014　　National Encouragement scholarship</li>
         </ul>
 <hr>
         <h2>Publications</h2>
@@ -66,19 +70,24 @@
            </p>
 <hr>
         <h2>Professional Affiliations</h2>
+	<ul>
+          <li>2019　　The 5th "Northeast Air Pollution and Regional Development" Symposium</li>
+          <li>2018　　2018 Joint International Conference on ABaCAS and CMAS-Asia-Pacific</li>
+        </ul>
+		  
 <hr>
         <h2>Technical Skills</h2>
         <ul>
           <li>Programming language : <a href="https://www.python.org/">python</a>、<a href="http://www.ncl.ucar.edu/">ncl</a>、<a href="https://www.fortran.com/">Fortran</a>、<a href="https://www.gnu.org/software/bash/">Bash</a></li>
           <li>Platform : <a href="https://www.microsoft.com/zh-cn/windows/">Windows</a>、<a href="https://www.linux.org/">Linux</a></li>
-          <li>Numerical model : <a href="http://www2.mmm.ucar.edu/wrf/users/">WRF</a></li>
+          <li>Numerical model : <a href="http://www2.mmm.ucar.edu/wrf/users/">WRF</a></li>、<a href="https://www.cmascenter.org/cmaq/">CMAQ</a></li>、<a href="http://www.camx.com/">CAMx</a></li>、<a href="http://www.lmd.polytechnique.fr/chimere/">Chimere</a></li>
         </ul>
       </section>
       <footer>
   
         <p>
         <a href="https://github.com/geek-007" target="_blank"></a> 
-        <p><small>Updated on 22 Oct 2019</small></p>
+        <p><small>Updated on 25 July 2019</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
