--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <ul>
           <li>Programming language : <a href="https://www.python.org/">python</a>、<a href="http://www.ncl.ucar.edu/">ncl</a>、<a href="https://www.fortran.com/">Fortran</a>、<a href="https://www.gnu.org/software/bash/">Bash</a></li>
           <li>Platform : <a href="https://www.microsoft.com/zh-cn/windows/">Windows</a>、<a href="https://www.linux.org/">Linux</a></li>
-          <li>Numerical model : <a href="http://www2.mmm.ucar.edu/wrf/users/">WRF</a></li>、<a href="https://www.cmascenter.org/cmaq/">CMAQ</a></li>、<a href="http://www.camx.com/">CAMx</a></li>、<a href="http://www.lmd.polytechnique.fr/chimere/">Chimere</a></li>
+          <li>Numerical model : <a href="http://www2.mmm.ucar.edu/wrf/users/">WRF</a>、<a href="https://www.cmascenter.org/cmaq/">CMAQ</a>、<a href="http://www.camx.com/">CAMx</a>、<a href="http://www.lmd.polytechnique.fr/chimere/">Chimere</a></li>
         </ul>
       </section>
       <footer>
