--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        <center><ul>
         <li><a href="/resume.pdf" target="_blank">Download <strong>PDF File</strong></a></li>
 		</ul><center/>
-        <p>Blog: <a href="#" target="_blank">more</a></p>
+        <p><a href="#" target="_blank">Tools</a> | <a href="#" target="_blank">Files</a> | <a href="#" target="_blank">More</a></p>
 	<hr>
       </header>
       <section>
