--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Hello，World！</title>
-    <link rel="icon" type="image/x-icon" href="https://www.tongqingqing.name/favicon.ico"/>
+    <link rel="icon" type="image/x-icon" href="https://github.com/Geek-007/geek-007.github.io/blob/master/favicon.ico"/>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width">
