--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Hello，World！</title>
     <link rel="icon" type="image/x-icon" href="https://github.com/Geek-007/geek-007.github.io/blob/master/favicon.ico"/>
+    <link rel="stylesheet" href="stylesheets/caome/style.css">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width">
@@ -32,7 +33,7 @@
        <hr>
         <h2>Personal Information</h2>
         <ul>
-          <li>Name：<a href="https://www.baidu.com">QingQing Tong</a>
+          <li><i class="czs-user-l">Name：</i><a href="https://www.baidu.com">QingQing Tong</a>
 	  <li>Email：<a href="mailto:tongqingqing@iga.ac.cn">tongqingqing@iga.ac.cn</a> 
           <li>Native Place：<a href="http://www.zgzhijiang.gov.cn/">HuBei·ZhiJiang</a>
 	  <li>Address：<a href="https://www.amap.com/place/B01AF0ZZ9M">4888 Shengbei Street, Changchun 130102, P. R. China</a>  
