--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
        <hr>
         <h2>Personal Information</h2>
         <ul>
-          <li><i class="czs-user-l">Name：</i><a href="https://www.baidu.com">QingQing Tong</a>
+          <i class="czs-user-l"> Name：</i><a href="https://www.baidu.com">QingQing Tong</a>
 	  <li>Email：<a href="mailto:tongqingqing@iga.ac.cn">tongqingqing@iga.ac.cn</a> 
           <li>Native Place：<a href="http://www.zgzhijiang.gov.cn/">HuBei·ZhiJiang</a>
 	  <li>Address：<a href="https://www.amap.com/place/B01AF0ZZ9M">4888 Shengbei Street, Changchun 130102, P. R. China</a>  
