--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        <center><ul>
         <li><a href="/resume.pdf" target="_blank">Download <strong>PDF File</strong></a></li>
 		</ul><center/>
-        <p><a href="#" target="_blank">Tools</a> | <a href="#" target="_blank">Files</a> | <a href="#" target="_blank">More</a></p>
+        <p><i class="czs-wrench-l"><a href="#" target="_blank"></a></i> | <i class="czs-folder-l"><a href="#" target="_blank"></a></i> | <i class="czs-qrcode-l"><a href="#" target="_blank"></a></i></p>
 	<hr>
       </header>
       <section>
@@ -33,7 +33,7 @@
        <hr>
         <h2>Personal Information</h2>
        
-          <i class="czs-user-l"> Name：</i><a href="https://www.baidu.com">QingQing Tong</a>
+          <li>Nmae：<a href="https://www.baidu.com">QingQing Tong</a>
 	  <li>Email：<a href="mailto:tongqingqing@iga.ac.cn">tongqingqing@iga.ac.cn</a> 
           <li>Native Place：<a href="http://www.zgzhijiang.gov.cn/">HuBei·ZhiJiang</a>
 	  <li>Address：<a href="https://www.amap.com/place/B01AF0ZZ9M">4888 Shengbei Street, Changchun 130102, P. R. China</a>  
