--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        <center><ul>
         <li><a href="/resume.pdf" target="_blank">Download <strong>PDF File</strong></a></li>
 		</ul><center/>
-        <p><i class="czs-wrench-l"><a href="#" target="_blank"></a></i> | <i class="czs-folder-l"><a href="#" target="_blank"></a></i> | <i class="czs-qrcode-l"><a href="#" target="_blank"></a></i></p>
+        <p><a href="#" target="_blank"><i class="czs-wrench-l"></i></a> · <a href="#" target="_blank"><i class="czs-folder-l"></i></a> · <a href="#" target="_blank"><i class="czs-qrcode-l"></i></a></p>
 	<hr>
       </header>
       <section>
