--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <center><h1><a href="https://geek-007.github.io/">Geek's Resume</a></h1></center>
 		<img width="280" height="280" src="https://s1.ax1x.com/2018/12/03/FMALs1.jpg" alt="Logo" />
        <center><ul>
-        <li><a href="/resume.pdf" target="_blank">Download <strong>PDF File</strong></a></li>
+        <li><a href="more/test.pdf" target="_blank">Download <strong>PDF File</strong></a></li>
 		</ul><center/>
         <p><a href="#" target="_blank"><i class="czs-wrench-l"></i></a> · <a href="#" target="_blank"><i class="czs-folder-l"></i></a> · <a href="#" target="_blank"><i class="czs-qrcode-l"></i></a></p>
 	<hr>
