--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       </section>
       <footer>
   
+	<p>Eat bitter bitter, side for the venerable</p>
         <p>
         <a href="https://github.com/geek-007" target="_blank"></a> 
         <p><small>Updated on 25 July 2019</small></p>
