--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h2>Professional Affiliations</h2>
 	<ul>
           <li>2019　　The 5th "Northeast Air Pollution and Regional Development" Symposium</li>
-          <li>2018　　2018 Joint International Conference on ABaCAS and CMAS-Asia-Pacific</li>
+          <li>2018　　Joint International Conference on ABaCAS and CMAS-Asia-Pacific</li>
         </ul>
 		  
 <hr>
