--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Hello，World！</title>
+    <style>
+    a{ color:#00F}
+    a:hover{ color:#F00}
+    .div a{ color:#090}
+    .div a:hover{ color:#090}
+    </style>
     <link rel="icon" type="image/x-icon" href="https://github.com/Geek-007/geek-007.github.io/blob/master/favicon.ico"/>
     <link rel="stylesheet" href="stylesheets/caome/style.css">
     <link rel="stylesheet" href="stylesheets/styles.css">
