--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <h2>Personal Information</h2>
         <ul>       
           <li>Nmae：QingQing Tong
-	  <li>Email：tongqingqing@iga.ac.cn  <!--a href="mailto:tongqingqing@iga.ac.cn"></a!--> 
-          <li>Native Place：HuBei·ZhiJiang   <!--a href="http://www.zgzhijiang.gov.cn/"><!-->
-	  <li>Address：4888 Shengbei Street, Changchun 130102, P. R. China   <!--a href="https://www.amap.com/place/B01AF0ZZ9M"></a!-->  
+	  <li>Email：<a href="mailto:tongqingqing@iga.ac.cn">tongqingqing@iga.ac.cn</a> 
+          <li>Native Place：<a href="http://www.zgzhijiang.gov.cn/">HuBei·ZhiJiang</a>
+	  <li>Address：<a href="https://www.amap.com/place/B01AF0ZZ9M">4888 Shengbei Street, Changchun 130102, P. R. China</a>  
         </ul>        
 <hr>
         <h2>Research Interests</h2>
