--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Hello，World！</title>
-    <style>
-    a{ color:#00F}
-    a:hover{ color:#F00}
-    .div a{ color:#090}
-    .div a:hover{ color:#090}
-    </style>
     <link rel="icon" type="image/x-icon" href="https://github.com/Geek-007/geek-007.github.io/blob/master/favicon.ico"/>
     <link rel="stylesheet" href="stylesheets/caome/style.css">
     <link rel="stylesheet" href="stylesheets/styles.css">
@@ -22,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <center><h1><a href="https://geek-007.github.io/">Geek's Resume</a></h1></center>
+        <center><h1><a href="https://geek-007.github.io/">Homepage</a></h1></center>
 		<img width="280" height="250" src="https://s1.ax1x.com/2018/12/03/FMALs1.jpg" alt="Logo" />
        <center><ul>
         <li><a href="more/test.pdf" target="_blank">Download <strong>PDF File</strong></a></li>
@@ -32,7 +26,7 @@
 	<p>Eat bitter bitter, side for the venerable</p>
       </header>
       <section>
-	  <body marginheight="0"><h1>Welcome to My Homepage</h1>
+	  <body marginheight="0"><h1>Geek's Resume</h1>
       <blockquote>
       <p>You can find all the information <a href="https://github.com/geek-007">on GitHub</a>
       </p>
