--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <center><h1><a href="https://geek-007.github.io/">Homepage</a></h1></center>
+        <center><h1><a href="https://geek-007.github.io/">Geek's Resume</a></h1></center>
 		<img width="280" height="250" src="https://s1.ax1x.com/2018/12/03/FMALs1.jpg" alt="Logo" />
        <center><ul>
         <li><a href="more/test.pdf" target="_blank">Download <strong>PDF File</strong></a></li>
@@ -26,7 +26,7 @@
 	<p>Eat bitter bitter, side for the venerable</p>
       </header>
       <section>
-	  <body marginheight="0"><h1>Geek's Resume</h1>
+	  <body marginheight="0"><h1>Welcome to My Homepage</h1>
       <blockquote>
       <p>You can find all the information <a href="https://github.com/geek-007">on GitHub</a>
       </p>
