--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </p>
       </blockquote>
        <hr>
-        <h2><i class="czs-user-l"> Personal Information</i></h2>
+        <h2><i class="czs-user-l"></i> Personal Information</h2>
         <ul>       
           <li>Nmae：QingQing Tong
 	  <li>Email：<a href="mailto:tongqingqing@iga.ac.cn">tongqingqing@iga.ac.cn</a> 
