--- a/index.html
+++ b/index.html
@@ -40,44 +40,44 @@
 	  <li>Address：<a href="https://www.amap.com/place/B01AF0ZZ9M">4888 Shengbei Street, Changchun 130102, P. R. China</a>  
         </ul>        
 <hr>
-        <h2>Research Interests</h2>
+        <h2><i class="czs-microchip-l"></i> Research Interests</h2>
         <ul>
           <li>Meteorological Model</li>
           <li>Impact of snowfall on air quality</li>
           <li>Research and development of micro low-cost sensors for atmospheric environment</li>
         </ul>
 <hr>
-	<h2>Professional Experience</h2>
+	<h2><i class="czs-laptop-l"></i> Professional Experience</h2>
         <ul>
           <li>2016.07-Now　　Research Assistant　-　Northeast Institute of Geography and Agroecology, CAS</li>
 	  <li>2015.06-2016.06　　Information Officer　-　Hubei Dayu water Resources and Hydropower Construction co.ltd</li>
         </ul>
 <hr>
-        <h2>Education</h2>
+        <h2><i class="czs-book-l"></i> Education</h2>
         <ul>
           <li>2019-2021　　Bachelor's　-　Civil and Environmental Engineering </li>
           <li>2016-2019　　Bachelor's　-　Civil and Environmental Engineering </li>
           <li>2013-2016　　Bachelor's　-　Civil and Environmental Engineering </li>
         </ul>
 <hr>
-        <h2>Honors and Awards</h2>
+        <h2><i class="czs-cup-l"></i> Honors and Awards</h2>
 	<ul>
 	  <li>2016　　Excellent Graduates</li>
           <li>2014　　National Encouragement scholarship</li>
         </ul>
 <hr>
-        <h2>Publications</h2>
+        <h2><i class="czs-read-l"></i> Publications</h2>
            <p>　　1.Chen, X., L. R. Leung, Y. Gao, Y. Liu, M. Wigmosta, and M. Richmond (2018), Predictability of Extreme Precipitation in Western U.S. Watersheds Based on Atmospheric River Occurrence, Intensity, and Duration, Geophys. Res. Lett. 45, 11693–11701.
            </p>
 <hr>
-        <h2>Professional Affiliations</h2>
+        <h2><i class="czs-tag-l"></i> Professional Affiliations</h2>
 	<ul>
           <li>2019　　The 5th "Northeast Air Pollution and Regional Development" Symposium</li>
           <li>2018　　Joint International Conference on ABaCAS and CMAS-Asia-Pacific</li>
         </ul>
 		  
 <hr>
-        <h2>Technical Skills</h2>
+        <h2><i class="czs-bar-chart-l"></i> Technical Skills</h2>
         <ul>
           <li>Programming language : <a href="https://www.python.org/">python</a>、<a href="http://www.ncl.ucar.edu/">ncl</a>、<a href="https://www.fortran.com/">Fortran</a>、<a href="https://www.gnu.org/software/bash/">Bash</a></li>
           <li>Platform : <a href="https://www.microsoft.com/zh-cn/windows/">Windows</a>、<a href="https://www.linux.org/">Linux</a></li>
