--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        <center><ul>
         <li><a href="more/test.pdf" target="_blank">Download <strong>PDF File</strong></a></li>
 		</ul><center/>
-        <p><a href="#" target="_blank"><i class="czs-wrench-l"></i></a> · <a href="#" target="_blank"><i class="czs-folder-l"></i></a> · <a href="#" target="_blank"><i class="czs-qrcode-l"></i></a></p>
+        <p><a href="#" target="_blank"><i class="czs-command-l"></i></a> · <a href="#" target="_blank"><i class="czs-wrench-l"></i></a> · <a href="#" target="_blank"><i class="czs-folder-l"></i></a> · <a href="#" target="_blank"><i class="czs-qrcode-l"></i></a></p>
 	<hr>
 	<p>Eat bitter bitter, side for the venerable</p>
       </header>
@@ -36,7 +36,7 @@
         <ul>       
           <li>Nmae：QingQing Tong
 	  <li>Email：<a href="mailto:tongqingqing@iga.ac.cn">tongqingqing@iga.ac.cn</a> 
-          <li>Native Place：<a href="http://www.zgzhijiang.gov.cn/">HuBei·ZhiJiang</a>
+          <li>Native Place：<a href="http://www.zgzhijiang.gov.cn/">HuBei · ZhiJiang</a>
 	  <li>Address：<a href="https://www.amap.com/place/B01AF0ZZ9M">4888 Shengbei Street, Changchun 130102, P. R. China</a>  
         </ul>        
 <hr>
