--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</ul><center/>
         <p><a href="#" target="_blank"><i class="czs-command-l"></i></a> · <a href="#" target="_blank"><i class="czs-wrench-l"></i></a> · <a href="#" target="_blank"><i class="czs-folder-l"></i></a> · <a href="#" target="_blank"><i class="czs-qrcode-l"></i></a></p>
 	<hr>
-	<p>Eat bitter bitter, side for the venerable</p>
+	<p>No gains without pains</p>
       </header>
       <section>
 	  <body marginheight="0"><h1>Welcome to My Homepage</h1>
