--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        <center><ul>
         <li><a href="more/test.pdf" target="_blank">Download <strong>PDF File</strong></a></li>
 		</ul><center/>
-        <p><a href="#" target="_blank"><i class="czs-command-l"></i></a> · <a href="#" target="_blank"><i class="czs-wrench-l"></i></a> · <a href="#" target="_blank"><i class="czs-folder-l"></i></a> · <a href="#" target="_blank"><i class="czs-qrcode-l"></i></a></p>
+        <p><a href="#" target="_blank"><i class="czs-image-l"></i></a> · <a href="#" target="_blank"><i class="czs-code-l"></i></a> · <a href="#" target="_blank"><i class="czs-command-l"></i></a> · <a href="#" target="_blank"><i class="czs-wrench-l"></i></a> · <a href="#" target="_blank"><i class="czs-folder-l"></i></a> · <a href="#" target="_blank"><i class="czs-qrcode-l"></i></a></p>
 	<hr>
 	<p>No gains without pains</p>
       </header>
