--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2><i class="czs-user-l"></i> Personal Information</h2>
         <ul>       
           <li>Nmae：QingQing Tong
-	  <li>Email：<a href="mailto:tongqingqing@iga.ac.cn">tongqingqing@iga.ac.cn</a> 
+	  <li>Email：<a href="mailto:tongqingqing@iga.ac.cn">TongQingQing@iga.ac.cn</a> 
           <li>Native Place：<a href="http://www.zgzhijiang.gov.cn/">ZhiJiang · HuBei</a>
 	  <li>Address：<a href="https://www.amap.com/place/B01AF0ZZ9M">4888 Shengbei Street, Changchun 130102, P. R. China</a>  
         </ul>        
