--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
            <p>　　1.Chen, X., L. R. Leung, Y. Gao, Y. Liu, M. Wigmosta, and M. Richmond (2018), Predictability of Extreme Precipitation in Western U.S. Watersheds Based on Atmospheric River Occurrence, Intensity, and Duration, Geophys. Res. Lett. 45, 11693–11701.
            </p>
 <hr>
-        <h2><i class="czs-tag-l"></i> Professional Affiliations</h2>
+        <h2><i class="czs-tag-l"></i> Speeches and Reports</h2>
 	<ul>
           <li>2019　　The 5th "Northeast Air Pollution and Regional Development" Symposium</li>
           <li>2018　　Joint International Conference on ABaCAS and CMAS-Asia-Pacific</li>
@@ -89,7 +89,7 @@
 	
         <p>
         <a href="https://github.com/geek-007" target="_blank"></a> 
-        <p><small>Updated on 25 July 2019</small></p>
+        <p><small>Updated on 28 July 2019</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
