--- a/more/love/index.html
+++ b/more/love/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 <link rel="shortcut icon" href="images/bitbug_favicon.ico" type="image/x-icon">
-<title>YY :: Personal photo album</title>
+<title>YangYang :: Personal photo album</title>
 <embed autostart="true" loop="-1" controls="ControlPanel" width="0" height="0" src="music/只要平凡.mp3">
 <!-- Normalize -->
 
@@ -72,7 +72,7 @@
           <div class="main-menu">
             <ul>
               <li class="active"><a href="index.html">Home</a></li>
-              <li class="active"><a href="www.tongqingqing.name">resume</a></li>
+              <li class="active"><a href="https://www.tongqingqing.name">resume</a></li>
               <li><a>Waiting for me</a></li>
               <li><a>Waiting for me</a></li>
             </ul>
@@ -95,7 +95,7 @@
     <div class="">
       <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-3 masonry">
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/001.jpg" alt="" />
+          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/001.jpg" alt="" />
             <figcaption>
               <h2>摄于 <span>2019.03.14</span></h2>
               <p>砂之船</p>
@@ -103,14 +103,14 @@
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/002.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/002.JPG" alt="" />
             <figcaption>
               <h2>摄于 <span></span></h2>
               <p>同事家</p>
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/003.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/003.JPG" alt="" />
             <figcaption>
               <h2>摄于 <span></span></h2>
               <p>长春工业大学</p>
@@ -118,14 +118,14 @@
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/004.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/004.JPG" alt="" />
             <figcaption>
               <h2>摄于 <span></span></h2>
               <p>地理所宿舍</p>
               <p class="description"></p>
           </figure>
         </li><li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/005.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/005.JPG" alt="" />
             <figcaption>
               <h2>摄于 <span>2</span></h2>
               <p>地理所宿舍</p>
@@ -133,7 +133,7 @@
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/006.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/006.JPG" alt="" />
             <figcaption>
               <h2>摄于 <span></span></h2>
               <p>撸猫</p>
@@ -141,7 +141,7 @@
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/007.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/007.JPG" alt="" />
             <figcaption>
 			  <h2>摄于 <span></span></h2>
               <p>办公室</p>
@@ -149,7 +149,7 @@
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/008.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/008.JPG" alt="" />
             <figcaption>
               <h2>摄于 <span></span></h2>
               <p>宿舍</p>
@@ -157,7 +157,7 @@
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/009.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/009.JPG" alt="" />
             <figcaption>
               <h2>摄于 <span></span></h2>
               <p>活力城</p>
@@ -165,7 +165,7 @@
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/010.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/010.JPG" alt="" />
             <figcaption>
               <h2>摄于 <span></span></h2>
               <p>约车</p>
