--- a/more/love/index.html
+++ b/more/love/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 <link rel="shortcut icon" href="images/bitbug_favicon.ico" type="image/x-icon">
 <title>YangYang :: Personal photo album</title>
-<embed autostart="true" loop="-1" controls="ControlPanel" width="0" height="0" src="music/只要平凡.mp3">
+<embed autostart="true" loop="-1" controls="ControlPanel" width="0" height="0" src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Music/%E5%8F%AA%E8%A6%81%E5%B9%B3%E5%87%A1.mp3">
 <!-- Normalize -->
 
 <link rel="stylesheet" href="css/assets/normalize.css" type="text/css">
