--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <p><small>Updated on 28 July 2019</small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="assets/javascripts/scale.fix.js"></script>
     <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 		<script type="text/javascript">
 		/*鼠标特效 */
