--- a/more/love/index.html
+++ b/more/love/index.html
@@ -95,7 +95,7 @@
     <div class="">
       <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-3 masonry">
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/001.jpg" alt="" />
+          <figure class="effect-sarah"> <img src="https://yangyang-1251386107.cos.ap-beijing.myqcloud.com/001.jpg" alt="" />
             <figcaption>
               <h2>摄于 <span>2019.03.14</span></h2>
               <p>砂之船</p>
