--- a/more/love/index.html
+++ b/more/love/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 <link rel="shortcut icon" href="images/bitbug_favicon.ico" type="image/x-icon">
 <title>YangYang :: Personal photo album</title>
-<embed autostart="true" loop="-1" controls="ControlPanel" width="0" height="0" src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Music/%E5%8F%AA%E8%A6%81%E5%B9%B3%E5%87%A1.mp3">
+<embed autostart="true" loop="-1" controls="ControlPanel" width="0" height="0" src="https://yangyang-1251386107.cos.ap-beijing.myqcloud.com/bg.mp3">
 <!-- Normalize -->
 
 <link rel="stylesheet" href="css/assets/normalize.css" type="text/css">
@@ -103,14 +103,14 @@
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/002.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://yangyang-1251386107.cos.ap-beijing.myqcloud.com/002.jpg" alt="" />
             <figcaption>
               <h2>摄于 <span></span></h2>
               <p>同事家</p>
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/003.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://yangyang-1251386107.cos.ap-beijing.myqcloud.com/003.jpg" alt="" />
             <figcaption>
               <h2>摄于 <span></span></h2>
               <p>长春工业大学</p>
@@ -118,14 +118,14 @@
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/004.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://yangyang-1251386107.cos.ap-beijing.myqcloud.com/004.jpg" alt="" />
             <figcaption>
               <h2>摄于 <span></span></h2>
               <p>地理所宿舍</p>
               <p class="description"></p>
           </figure>
         </li><li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/005.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://yangyang-1251386107.cos.ap-beijing.myqcloud.com/005.jpg" alt="" />
             <figcaption>
               <h2>摄于 <span>2</span></h2>
               <p>地理所宿舍</p>
@@ -133,7 +133,7 @@
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/006.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://yangyang-1251386107.cos.ap-beijing.myqcloud.com/006.jpg" alt="" />
             <figcaption>
               <h2>摄于 <span></span></h2>
               <p>撸猫</p>
@@ -141,7 +141,7 @@
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/007.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://yangyang-1251386107.cos.ap-beijing.myqcloud.com/007.jpg" alt="" />
             <figcaption>
 			  <h2>摄于 <span></span></h2>
               <p>办公室</p>
@@ -149,7 +149,7 @@
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/008.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://yangyang-1251386107.cos.ap-beijing.myqcloud.com/008.jpg" alt="" />
             <figcaption>
               <h2>摄于 <span></span></h2>
               <p>宿舍</p>
@@ -157,7 +157,7 @@
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/009.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://yangyang-1251386107.cos.ap-beijing.myqcloud.com/009.jpg" alt="" />
             <figcaption>
               <h2>摄于 <span></span></h2>
               <p>活力城</p>
@@ -165,7 +165,7 @@
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="https://geek-007.oss-cn-beijing.aliyuncs.com/dir/Photo/YangYang/010.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://yangyang-1251386107.cos.ap-beijing.myqcloud.com/010.jpg" alt="" />
             <figcaption>
               <h2>摄于 <span></span></h2>
               <p>约车</p>
