--- a/more/love/index.html
+++ b/more/love/index.html
@@ -173,7 +173,7 @@
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/011.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://yangyang-1251386107.cos.ap-beijing.myqcloud.com/011.jpg" alt="" />
             <figcaption>
               <h2>摄于 <span></span></h2>
               <p>蛋糕坊</p>
@@ -181,7 +181,7 @@
           </figure>
         </li>
 		<li class="masonry-item grid">
-          <figure class="effect-sarah"> <img src="images/gallery/012.JPG" alt="" />
+          <figure class="effect-sarah"> <img src="https://yangyang-1251386107.cos.ap-beijing.myqcloud.com/012.jpg" alt="" />
             <figcaption>
               <h2>摄于 <span></span></h2>
               <p>工大校园</p>
