--- a/more/love/index.html
+++ b/more/love/index.html
@@ -270,5 +270,16 @@
 <script src="js/gallery/jquery.infinitescroll.min.js" type="text/javascript"></script> 
 <script src="js/gallery/main.js" type="text/javascript"></script> 
 <script src="js/jquery.nicescroll.min.js" type="text/javascript"></script>
+	
+	
+<script language="javascript">
+<!--
+accesscode = prompt("input access code:","");
+if (accesscode != "jiekst"){
+alert("You are not allowed to access this page.");
+window.location.href='www.baidu.com';
+}else{
+//alert("welcome");
+}
 </body>
 </html>
