--- a/more/love/index.html
+++ b/more/love/index.html
@@ -1,1 +1,1 @@
-hhh，啥都没有（nothing）     ---     <p><a href="mailto:me@tongqingqing.name">me@tongqingqing.name</a></p>
+hhh，啥都没有（nothing）     ---     <a href="mailto:me@tongqingqing.name">me@tongqingqing.name</a>
