--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        <center><ul>
         <li><a href="more/test.pdf" target="_blank">Download <strong>PDF File</strong></a></li>
 		</ul><center/>
-        <p><a href="more/love/" target="_blank"><i class="czs-image-l"></i></a> · <a href="#" target="_blank"><i class="czs-code-l"></i></a> · <a href="#" target="_blank"><i class="czs-command-l"></i></a> · <a href="#" target="_blank"><i class="czs-wrench-l"></i></a> · <a href="#" target="_blank"><i class="czs-folder-l"></i></a> · <a href="#" target="_blank"><i class="czs-qrcode-l"></i></a></p>
+        <p><a href="more/#" target="_blank"><i class="czs-image-l"></i></a> · <a href="more/paper/" target="_blank"><i class="czs-code-l"></i></a> · <a href="#" target="_blank"><i class="czs-command-l"></i></a> · <a href="#" target="_blank"><i class="czs-wrench-l"></i></a> · <a href="more/files/" target="_blank"><i class="czs-folder-l"></i></a> · <a href="#" target="_blank"><i class="czs-qrcode-l"></i></a></p>
 	<hr>
 	<p></p>
       </header>
@@ -89,7 +89,7 @@
 	
         <p>
         <a href="https://github.com/geek-007" target="_blank"></a> 
-        <p><small>Updated on 28 July 2019</small></p>
+        <p><small>Updated on 12 Aug 2019</small></p>
       </footer>
     </div>
     <script src="assets/javascripts/scale.fix.js"></script>
