--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </ul>
 <hr>
         <h2><i class="czs-read-l"></i> Publications</h2>
-           <p>　　1.Chen, X., L. R. Leung, Y. Gao, Y. Liu, M. Wigmosta, and M. Richmond (2018), Predictability of Extreme Precipitation in Western U.S. Watersheds Based on Atmospheric River Occurrence, Intensity, and Duration, Geophys. Res. Lett. 45, 11693–11701.
+           <p>　　1.eg Chen, X., L. R. Leung, Y. Gao, Y. Liu, M. Wigmosta, and M. Richmond (2018), Predictability of Extreme Precipitation in Western U.S. Watersheds Based on Atmospheric River Occurrence, Intensity, and Duration, Geophys. Res. Lett. 45, 11693–11701.
            </p>
 <hr>
         <h2><i class="czs-tag-l"></i> Speeches and Reports</h2>
