Update and rename index.md to index.html

--- a/more/index.html
+++ b/more/index.html
@@ -1,5 +1,20 @@
-
-# *NEC Weather Forecasting Experiment*
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Hello，World！</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="stylesheet" href="assets/stylesheets/caome/style.css">
+    <link rel="stylesheet" href="assets/stylesheets/styles.css">
+    <link rel="stylesheet" href="assets/stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+ # *NEC Weather Forecasting Experiment*
 <br>
 Mon Nov 11 22:01:41 UTC 2019 All Update
 <br>
@@ -15,4 +30,6 @@ Mon Nov 11 22:01:41 UTC 2019 All Update
 </tr></table>
 <br>
 
+  </body>
+</html>
 
