--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 	<a href="http://www.tongqingqing.name" class="logo"><div class="l-logo"></div><span>P</span><span>R</span><span>O</span><span>J</span><span>E</span><span>C</span><span>T</span></a>
 	
 	<div class="menu">
-        <li><a href="https://www.tongqingqing.name/domain" target="_blank"><lang class="cn">#测试</lang><lang class="en">#Test </lang></a></li>
-        <li><a href="pay/" target="_blank"><lang class="cn">#三合一支付二维码</lang><lang class="en">#Three in one pay the qr code </lang></a></li>
-        <li><a href="aqi/" target="_blank"><lang class="cn">#2017长春AQI日历图</lang><lang class="en">#2017 AQI calendar in Changchun</lang></a></li>
-        <li><a href="https://code.aliyun.com/u/geek-007/" target="_blank"><lang class="cn">更多...</lang><lang class="en">More ...</lang></a></li>
+        <li><a href="https://www.tongqingqing.name/domain" target="_blank"><lang class="cn">#WRF研究区域划分</lang><lang class="en">#Set WRF Domian</lang></a></li>
+        <li><a href="pay/" target="_blank"><lang class="cn"></lang><lang class="en"></lang></a></li>
+        <li><a href="aqi/" target="_blank"><lang class="cn"></lang><lang class="en"></lang></a></li>
+        <li><a href="https://code.aliyun.com/u/geek-007/" target="_blank"><lang class="cn"></lang><lang class="en"></lang></a></li>
     </div>
 	
 	<div class="footer">
