--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
           <h4>Source code</h4>
           <p>The source code is released under a GPLv3 licence at Github:</p>
-          <p><a href="https://github.com/olga/olga_model/" class="btn btn-success btn-lg" role="button">More &raquo;</a></p>
+          <p><a href="index1.html" class="btn btn-success btn-lg" role="button">More &raquo;</a></p>
         </div>
       </div>
 
